--- a/to-do-master/index.html
+++ b/to-do-master/index.html
@@ -32,7 +32,7 @@
     <p>
       Developed by
       <strong>
-        <a href="https://github.com/christyanbrayan" target="_blank"> Babatunde Ogunkoya </a>
+        <a href="https://github.com/Tunde10-op" target="_blank"> Babatunde Ogunkoya </a>
       </strong>
     </p>
   </footer>
